feat: presentation setup